# AGE

./: CMakeLists.txt
include/game/: Farm.hpp  Field.hpp  action_space.hpp  farm.hpp  field.hpp  player.hpp  resource.hpp
include/game/actions/: action_args.hpp  action_factory.hpp  base_action.hpp  build_fences.hpp  day_labour.hpp  fishing.hpp  four_woods_accum.hpp  gain_grain.hpp  one_clay_accum.hpp  one_reed_accum.hpp  plow_field.hpp  sheep_accum.hpp  three_woods_accum.hpp
src/game/: Farm.cpp  Field.cpp  Resource.cpp  action_space.cpp  farm.cpp  field.cpp  player.cpp  resource.cpp
tests/: FieldTest.cpp  ResourceTest.cpp  action_space_test.cpp  farm_test.cpp  field_test.cpp  player_test.cpp  resource_test.cpp
tests/actions/: build_fences_test.cpp  day_labour_test.cpp  fishing_test.cpp  four_woods_accum_test.cpp  gain_grain_test.cpp  one_clay_accum_test.cpp  one_reed_accum_test.cpp  plow_field_test.cpp  sheep_accum_test.cpp  three_woods_accum_test.cpp
